Fix checkbox alignment in cdvy-list-item-checked

--- a/src/components/widget/list/cdvy-list-item-checked.styl
+++ b/src/components/widget/list/cdvy-list-item-checked.styl
@@ -3,4 +3,3 @@
 
 .cdvy-list-item-checkbox div
   margin 0
-  top 1px
